# wagsshit

./: .codacy.yml  .coveragerc  .dockerignore  .gitignore  .pypirc  Dockerfile  README.md  bootstrap.py  docker-compose.yml  load_tests.py  manage.py  pyproject.toml  run_wagsshit.sh  setup.cfg  sonar-project.properties
.github/workflows/: auto-pr-main.yml  build.yml  main.yml  python-publish-test.yml  release.yml
core/: .coverage  .coveragerc  db.sqlite3  output.html  pytest.ini  requirements.txt
core/acid_bath/: apps.py  wagtail_hooks.py
core/acid_bath/migrations/: 0001_initial.py
core/apps/acid_bath/: apps.py  models.py  signals.py  wagtail_hooks.py
core/apps/company/: urls.py  wagtail_hooks.py
core/apps/company/blocks/: header.py
core/apps/company/migrations/: 0003_company_body.py
core/apps/company/models/: company.py
core/apps/core/utils/: duplicate.py
core/apps/home/: models.py
core/apps/model_admin/: apps.py
core/apps/model_admin/models/: common.py
core/company/: urls.py  wagtail_hooks.py
core/company/migrations/: 0001_initial.py  0002_auto_20220618_1429.py  0003_company_body.py  0004_remove_company_body.py
core/company/models/: __init__.py  company.py
core/core/: urls.py  wsgi.py
core/core/models/: __init__.py
core/core/settings/: base.py  dev.py
core/static/: staticfiles.json
model_admin/hooks/views/: duplicate.py
model_admin/models/: __init__.py  common.py
model_admin/templates/modeladmin/: index.html
model_admin/tests/utils/: test_duplicate.py
model_admin/utils/: duplicate.py
(+30 files in other folders)
