[tool.poetry]
name = "wagsshit"
version = "0.1.0"
description = ""
authors = ["elcidon <erickfabiani123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
wagtail = ">=2.13,<2.14"
Django = ">=3.2,<3.3"
coverage = "^6.4.1"
ipython = "^8.4.0"
django-ckeditor = "^6.4.2"
pytest-django = "^4.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
